--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   carousel_slider: ^4.0.0
   provider: ^6.0.2
 
+  device_preview: ^1.0.0
+
+  printing: ^5.6.5
+  path_provider: ^2.0.9
+  screenshot: ^1.2.3
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
