--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: '>=3.0.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,15 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
-  carousel_slider: ^4.0.0
-  provider: ^6.0.2
+  intl: ^0.18.0
+  carousel_slider: ^4.2.1
+  provider: ^6.0.5
 
-  device_preview: ^1.0.0
+  device_preview: ^1.1.0
 
-  printing: ^5.6.5
-  path_provider: ^2.0.9
-  screenshot: ^1.2.3
+  printing: ^5.10.4
+  path_provider: ^2.0.15
+  screenshot: ^2.1.0
 
 
 dev_dependencies:
@@ -54,10 +54,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
   #  flutter pub get && flutter pub run flutter_launcher_icons:main
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: "launcher_icon"
